Show all visible Google calendars and allow interviewer disconnect.
List events from every selected Google calendar on the availability view and remove the block that prevented interviewers from disconnecting when calendar is required.